// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Install package 1`] = `
"[90m┌────[39m[90m┬──────────[39m[90m┬─────────[39m[90m┬────────────[39m[90m┬─────────[39m[90m┬───────────────────────────────┐[39m
[90m│[39m[31m Id [39m[90m│[39m[31m Name     [39m[90m│[39m[31m Version [39m[90m│[39m[31m Date       [39m[90m│[39m[31m License [39m[90m│[39m[31m Tags                          [39m[90m│[39m
[90m├────[39m[90m┼──────────[39m[90m┼─────────[39m[90m┼────────────[39m[90m┼─────────[39m[90m┼───────────────────────────────┤[39m
[90m│[39m -  [90m│[39m Surge XT [90m│[39m 1.3.4   [90m│[39m 2024-08-11 [90m│[39m gpl-3.0 [90m│[39m Instrument, Synth, Modulation [90m│[39m
[90m└────[39m[90m┴──────────[39m[90m┴─────────[39m[90m┴────────────[39m[90m┴─────────[39m[90m┴───────────────────────────────┘[39m"
`;

exports[`Install package 2`] = `
"[90m┌────[39m[90m┬──────────[39m[90m┬─────────[39m[90m┬────────────[39m[90m┬─────────[39m[90m┬───────────────────────────────┐[39m
[90m│[39m[31m Id [39m[90m│[39m[31m Name     [39m[90m│[39m[31m Version [39m[90m│[39m[31m Date       [39m[90m│[39m[31m License [39m[90m│[39m[31m Tags                          [39m[90m│[39m
[90m├────[39m[90m┼──────────[39m[90m┼─────────[39m[90m┼────────────[39m[90m┼─────────[39m[90m┼───────────────────────────────┤[39m
[90m│[39m -  [90m│[39m Surge XT [90m│[39m 1.3.1   [90m│[39m 2024-03-02 [90m│[39m gpl-3.0 [90m│[39m Instrument, Synth, Modulation [90m│[39m
[90m└────[39m[90m┴──────────[39m[90m┴─────────[39m[90m┴────────────[39m[90m┴─────────[39m[90m┴───────────────────────────────┘[39m"
`;

exports[`Install package 3`] = `"No result found"`;
